--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,27 @@
 .App-link {
   color: #09d3ac;
 }
+
+h1 {
+  text-align: center;
+  color: cyan;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-size: 2.5rem;
+
+}
+
+.teamMemDisplay {
+  text-align: center;
+  color: white;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-size: 1rem;
+
+}
+
+/*.container {
+  background-image: url(./ocean.jpeg);
+  //background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  }
+  */
