--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,13 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.logo {
+  max-width: 20%;
+  max-height: 20%;
+  text-align: center;
+  justify-content: center;
+  align-content: center;
+  margin-left: 40%;
 }
 
 .App-header {
