--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,25 @@
-.App {
-  text-align: center;
-}
 
-.logo {
-  max-width: 20%;
-  max-height: 20%;
-  text-align: center;
-  justify-content: center;
-  align-content: center;
-  margin-left: 40%;
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
-}
 
 h1 {
   text-align: center;
-  color: cyan;
-  font-family: 'Yanone Kaffeesatz', sans-serif;
-  font-size: 2.5rem;
-
+  color: white;
+  font-family: 'Dancing Script', cursive;
+  font-size: 3rem;
+  
+  padding-bottom: 3%;
+  margin-bottom: -1.5%;
 }
 
 .teamMemDisplay {
   text-align: center;
   color: white;
   font-family: 'Yanone Kaffeesatz', sans-serif;
-  font-size: 1rem;
+  font-size: 1.3rem;
+  
 
 }
+
 
 /*.container {
   background-image: url(./ocean.jpeg);
